--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,16 +1,9 @@
-<h1>Dating App</h1>
+<app-nav></app-nav>
 
-<ul>
-  <li *ngFor="let user of users$ | async">
-    {{user.id}} - {{user.userName}}
-  </li>
-</ul>
-<button type="button" class="btn btn-primary"
-tooltip="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
-Simple demo
-</button>
-<!-- <div *ngIf="users$ | async as users">
-  <div *ngFor="let user of users">
-    <p>{{ user.userName }}</p>
-  </div>
-</div> -->
+<div class="container" style="margin-top: 100px;">
+  <ul>
+    <li *ngFor="let user of users$ | async">
+      {{user.id}} - {{user.userName}}
+    </li>
+  </ul>
+</div>
