--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -12,9 +12,17 @@
             <a class="nav-link">Messages</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="text" placeholder="Username">
-          <input class="form-control me-2" type="password" placeholder="Password">
+        <form class="d-flex" autocomplete="off" [formGroup]="model" (ngSubmit)="login()" >
+          <input name="username"
+          formControlName="username"
+          class="form-control me-2" 
+          type="text" 
+          placeholder="Username">
+          <input name="password" 
+          formControlName="password"
+          class="form-control me-2" 
+          type="password" 
+          placeholder="Password">
           <button class="btn btn-outline-success" type="submit">Login</button>
         </form>
       </div>
