--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -13,12 +13,12 @@
           </li>
         </ul>
         <form class="d-flex" autocomplete="off" [formGroup]="model" (ngSubmit)="login()" >
-          <input name="username"
+          <input 
           formControlName="username"
           class="form-control me-2" 
           type="text" 
           placeholder="Username">
-          <input name="password" 
+          <input
           formControlName="password"
           class="form-control me-2" 
           type="password" 
