--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">Dating App</a>
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
           <li class="nav-item">
             <a class="nav-link" href="#">Matches</a>
           </li>
@@ -13,7 +13,7 @@
           </li>
         </ul>
 
-        <div class="d-flex align-items-center" *ngIf="loggedIn" dropdown>
+        <div class="d-flex align-items-center" *ngIf="accountService.currentUser$ | async" dropdown>
           <a class="dropdown-item text-light" dropdownToggle>Welcome</a>
           <a class="dropdown-item text-light">Edit Profile</a>
           <a class="dropdown-item text-light" (click)="logout()">Logout</a>
@@ -21,7 +21,7 @@
 
 
 
-        <form *ngIf="!loggedIn" class="d-flex" autocomplete="off" [formGroup]="model" (ngSubmit)="login()" >
+        <form *ngIf="!(accountService.currentUser$ | async)" class="d-flex" autocomplete="off" [formGroup]="model" (ngSubmit)="login()" >
           <input 
           formControlName="username"
           class="form-control me-2" 
