--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -17,7 +17,7 @@
   <div class="container" *ngIf="registerMode">
     <div class="row justify-content-center">
       <div class="col-4">
-        <app-register [usersFromHomeComponent]="users$ | async" (cancelRegister)="cancelRegisterMode($event)"></app-register>
+        <app-register (cancelRegister)="cancelRegisterMode($event)"></app-register>
       </div>
     </div>
   </div>
