--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -15,10 +15,10 @@
           </ng-container>
         </ul>
 
-        <div class="d-flex align-items-center" *ngIf="accountService.currentUser$ | async" dropdown>
-          <a class="dropdown-item text-light" dropdownToggle>Welcome</a>
-          <a class="dropdown-item text-light">Edit Profile</a>
-          <a class="dropdown-item text-light" (click)="logout()">Logout</a>
+        <div class="d-flex align-items-center justify-content-between" style="width: 300px; margin-left: auto; margin-right: auto;" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+          <a class="nav-link text-light" dropdownToggle>Welcome {{user.username | titlecase}}</a>
+          <a class="nav-link text-light">Edit Profile</a>
+          <a class="nav-link text-light" (click)="logout()">Logout</a>
         </div>
 
 
