--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -2,8 +2,11 @@
     <div class="col-2 mb-1" *ngFor="let photo of member.photos">
         <img src="{{photo.url}}" alt="photo of user" class="img-thumbnail mb-1">
         <div class="text-center">
-          <button class="btn btn-sm">
-            Main
+          <button class="btn btn-sm" 
+          [disabled]="photo.isMain" 
+          (click)="setMainPhoto(photo)" 
+          [ngClass]="photo.isMain ? 'btn-sucess active' : 'btn' "
+          >Main
           </button>
           <button class="btn btn-sm btn-danger" style="border-color: #00000000; background-color: #5476ba00;">
             <i class="fa fa-trash"></i>
