--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,20 +1,45 @@
-<form autocomplete="off" [formGroup]="model" (ngSubmit)="register()">
+<form autocomplete="off" [formGroup]="registerForm" (ngSubmit)="register()">
   <h2 class="text-center text-primary">Sign up</h2>
   <hr>
-  <div class="mb-3">
-    <input 
-    formControlName="username"
-    class="form-control" 
-    type="text" 
-    placeholder="Username">
+
+  <div class="mb-3 d-flex justify-content-around">
+    <label style="margin-right: 10px;">I am a: </label>
+    <label class="form-check-label">
+      <input type="radio" class="form-check-input" value="male" formControlName="gender">Male
+    </label>
+    <label class="form-check-label">
+      <input type="radio" class="form-check-input" value="female" formControlName="gender">Female
+    </label>
   </div>
-  <div class="mb-3">
-    <input
-    formControlName="password"
-    class="form-control" 
-    type="password" 
-    placeholder="Password">
-  </div>
+
+  <app-text-input [formControl]="$any(registerForm.controls['username'])" 
+  [label]="'Username'"></app-text-input>
+  
+  <app-text-input [formControl]="$any(registerForm.controls['knownAs'])"
+  [label]="'Known as'"></app-text-input>
+
+  <app-date-picker [formControl]="$any(registerForm.controls['dateOfBirth'])"
+  [label]="'Date Of Birth'" [maxDate]="maxDate"></app-date-picker>
+
+  <app-text-input [formControl]="$any(registerForm.controls['city'])"
+  [label]="'City'"></app-text-input>
+
+  <app-text-input [formControl]="$any(registerForm.controls['country'])"
+  [label]="'Country'"></app-text-input>
+
+
+  <app-text-input 
+      [formControl]="$any(registerForm.controls['password'])" 
+      [label]="'Password'" [type]="'password'"
+    >
+  </app-text-input>
+  <app-text-input 
+      [formControl]="$any(registerForm.controls['confirmPassword'])" 
+      [label]="'Confirm Password'" 
+      [type]="'password'"
+    >
+  </app-text-input>
+  
   <div class="text-center">
     <button class="btn btn-outline-success me-2" type="submit">Register</button>
     <button class="btn btn-outline-default me-2" type="button" (click)="cancel()">Cancel</button>
