--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -10,9 +10,9 @@
                     <strong>Age:</strong>
                     <p>{{member.age}}</p>
                     <strong>Last active:</strong>
-                    <p>{{member.lastActive}}</p>
+                    <p>{{member?.lastActive | date}}</p>
                     <strong>Member since:</strong>
-                    <p>{{member.created}}</p>
+                    <p>{{member.created | date}}</p>
                 </div>
             </div>
             <div class="card-footer">
