--- a/client/src/app/members/member-card/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card/member-card.component.html
@@ -5,7 +5,12 @@
       <li class="list-inline-item">
         <button routerLink="/members/{{member.userName}}" class="btn btn-primary"><i class="fa fa-user"></i></button>
         <button class="btn btn-primary" (click)="addLike(member)"><i class="fa fa-heart"></i></button>
-        <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
+        <button 
+            routerLink="/members/{{member.userName}}"
+            [queryParams]="{tab: 'Messages'}"
+            class="btn btn-primary">
+            <i class="fa fa-envelope"></i>
+      </button>
       </li>
     </ul>
     <div class="card-body p-1">
